# syka-world

./: .gitignore  ASSET_LICENSE.md  CURRENT_PROJECT_STATE.md  LICENSE  README.md  SECURITY.md  TASKS.md  THIRD_PARTY_NOTICES.md  pyproject.toml
Asset/: README.md
config/: characters.json  game-balance.v1.json  visual-states.json
docs/: ALPHA_RUNBOOK.md  ART_BIBLE_ISOMETRIC_V1.md  BRIDGE_ARCHITECTURE.md  BRIDGE_RUNBOOK.md  BRIDGE_V0_3.md  BUILD_WEEK_SPATIAL_RECOVERY_PLAN_AFTER_MANUAL_QA_2026-07-20.md  CAFE_SAFE_FLOOR_INTEGRATION_V2_2026-07-20.md  CHARACTER_PETS_STRATEGY.md  DECISIONS.md  GAME_DESIGN_V0_1.md  GEOMETRY_FIRST_ASSET_PIPELINE_V2_2026-07-20.md  GEOMETRY_FIRST_ASSET_PIPELINE_V3_2026-07-20.md  GEOMETRY_FIRST_LAB_V1_2026-07-20.md  GOAL_HABBO_SPATIAL_PUBLIC_FOUNDATION_V1.md  GOAL_INTERIOR_ENTITY_AND_POSSESSION_PASS_V1.md  GOAL_ISOMETRIC_PLAYABLE_ALPHA_V1.md  GOAL_MECHANIC_INTEGRATION_PASS_V1.md  GOAL_OVERNIGHT_FOUNDATIONS_V1.md  GOAL_SPATIAL_COLLABORATIVE_PASS_V1.md  GOAL_ULTRA_VISUAL_EXECUTION_V1.md  HABBO_CONTRACT_LAB_V1_2026-07-20.md  HANDOFF_HABBO_SPATIAL_PUBLIC_FOUNDATION_V1_2026-07-20.md  HERMES_SURFACE_AUDIT_0_18_2.md  HERMES_SYKA_WORLD_EXECUTION_RUNBOOK.md  REFERENCE_AUDIT.md  RETENTION_POLICY.md  SIMULATION_ARCHITECTURE.md  SPATIAL_ENTITY_LAB_V1_2026-07-20.md  VISION.md  VISUAL_CONTRACT_LAB_V1_2026-07-20.md  VISUAL_LAB_REPORT.md  VISUAL_REFERENCE_MINITOWN.md  VISUAL_STATE_LANGUAGE.md  VISUAL_STYLE_GUIDE.md
reports/: ALPHA_REQUIREMENTS_MATRIX.md  BALANCE_REPORT_V0_1.md  CHAOS_TEST_REPORT.md  FOUNDATIONS_V1_FINAL_REPORT.md  ISOMETRIC_ALPHA_BASELINE.md
(+237 files in other folders)
